2022_Partner_Academy/Azure-v2/Quickstart/ARM/ParterAcademyv2.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {

    },
    "variables": {
        "networkSecurityGroups_HandsonBastion_vm_nsg_name": "HandsonBastion-nsg",
        "virtualMachines_HandsonBastion_vm_name": "HandsonBastion-vm",
        "publicIPAddresses_HandsonBastion_vm_ip_name": "HandsonBastion-vm-ip",
        "networkInterfaces_handsonbastion_vm928_z1_name": "handsonbastion-nic",
        "sshRSAPublicKey": "ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEAvu2v6lkF59XSY3ch+Df2w/AN10EPXZ3JL2Xbqtsv13xVq9ZuzmUcdCpfa9NyjnyBoaXxymUvQSaeQCFxnjroAySOKVXaR6n6ahWFGQOYlfZHkKYg/N8pTpQht3QXNLoA8lUlrb3lyehQHxtCAhtgmx4BIaBpGM/FLaJqhu1OQ7gz0GBbG1qZOmEyrzcklkvriyPYzEESg3N9w+eM09rWvu3dK+EezAsgeFBlcsfHY5eNRmgp2iPfvz8tNZ3wgsrU/UiZHueqsMmGYS+Njjr461cx2q3EhjjPbYz8+tj3t/taZ/Jf419r9ZhT1JHm8/vUh22B5Xm31LdbMBPGvuUKPQ==",
        "natGateways_NetappHandsonNAT_name": "NetappHandson-NAT",
        "bastionHosts_NetappHandsonBastion_name": "NetappHandson-Bastion",
        "virtualNetworks_NetappHandsonVnet_name": "NetappHandson-Vnet",
        "publicIPAddresses_NetappHandsonNAT_IP_name": "NetappHandsonNAT-IP",
        "publicIPPrefixes_NetappHandsonNAT_CIDR_name": "NetappHandsonNAT-CIDR",
        "publicIPAddresses_NetappHandsonBastion_IP_name": "NetappHandsonBastion-IP",
        "clusterName": "Handson-AKS",
        "linuxAdminUsername": "azureuser",
        "customData":"#!/bin/bash \n curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash \n wget https://github.com/NetApp/trident/releases/download/v22.07.0/trident-installer-22.07.0.tar.gz \n tar -zxvf trident-installer-22.07.0.tar.gz -C /opt \n sudo cp /opt/trident-installer/tridentctl /usr/local/bin \n sudo apt-get -y install nfs-common \n sudo apt-get -y install unzip \n wget https://netappkr-wyahn-s3.s3.ap-northeast-2.amazonaws.com/public/DeployTestapp.zip \n sudo unzip DeployTestapp.zi [...]
    },
    "resources": [
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "name": "[variables('publicIPAddresses_NetappHandsonBastion_IP_name')]",
            "location": "koreacentral",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "name": "[variables('publicIPAddresses_NetappHandsonNAT_IP_name')]",
            "location": "koreacentral",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/publicIPPrefixes",
            "apiVersion": "2020-11-01",
            "name": "[variables('publicIPPrefixes_NetappHandsonNAT_CIDR_name')]",
            "location": "koreacentral",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "prefixLength": 31,
                "publicIPAddressVersion": "IPv4",
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/natGateways",
            "apiVersion": "2020-11-01",
            "name": "[variables('natGateways_NetappHandsonNAT_name')]",
            "location": "koreacentral",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_NetappHandsonNAT_IP_name'))]",
                "[resourceId('Microsoft.Network/publicIPPrefixes', variables('publicIPPrefixes_NetappHandsonNAT_CIDR_name'))]"
            ],
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "idleTimeoutInMinutes": 4,
                "publicIpAddresses": [
                    {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_NetappHandsonNAT_IP_name'))]"
                    }
                ],
                "publicIpPrefixes": [
                    {
                        "id": "[resourceId('Microsoft.Network/publicIPPrefixes', variables('publicIPPrefixes_NetappHandsonNAT_CIDR_name'))]"
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "name": "[variables('virtualNetworks_NetappHandsonVnet_name')]",
            "location": "koreacentral",
            "dependsOn": [
                "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "172.18.0.0/16"
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(variables('virtualNetworks_NetappHandsonVnet_name'), '/PublicSubnet-1')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_NetappHandsonVnet_name'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]"
            ],
            "properties": {
                "addressPrefix": "172.18.0.0/24",
                "serviceEndpoints": [
                    {
                        "service": "Microsoft.AzureActiveDirectory",
                        "locations": [
                            "*"
                        ]
                    },
                    {
                        "service": "Microsoft.KeyVault",
                        "locations": [
                            "*"
                        ]
                    },
                    {
                        "service": "Microsoft.Storage",
                        "locations": [
                            "koreacentral",
                            "koreasouth"
                        ]
                    }
                ],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(variables('virtualNetworks_NetappHandsonVnet_name'), '/ANFsubnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_NetappHandsonVnet_name'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PublicSubnet-1')]"
            ],
            "properties": {
                "addressPrefix": "172.18.4.0/24",
                "serviceEndpoints": [],
                "delegations": [
                    {
                        "name": "Microsoft.Netapp.volumes",
                        "properties": {
                            "serviceName": "Microsoft.Netapp/volumes"
                        }
                    }
                ],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(variables('virtualNetworks_NetappHandsonVnet_name'), '/AzureBastionSubnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_NetappHandsonVnet_name'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'ANFsubnet')]"
            ],
            "properties": {
                "addressPrefix": "172.18.255.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(variables('virtualNetworks_NetappHandsonVnet_name'), '/GatewaySubnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_NetappHandsonVnet_name'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'AzureBastionSubnet')]"
            ],
            "properties": {
                "addressPrefix": "172.18.5.0/24",
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(variables('virtualNetworks_NetappHandsonVnet_name'), '/PrivateSubnet-1')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_NetappHandsonVnet_name'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'GatewaySubnet')]"
            ],
            "properties": {
                "addressPrefix": "172.18.2.0/24",
                "natGateway": {
                    "id": "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]"
                },
                "serviceEndpoints": [
                    {
                        "service": "Microsoft.AzureActiveDirectory",
                        "locations": [
                            "*"
                        ]
                    },
                    {
                        "service": "Microsoft.KeyVault",
                        "locations": [
                            "*"
                        ]
                    },
                    {
                        "service": "Microsoft.Storage",
                        "locations": [
                            "koreacentral",
                            "koreasouth"
                        ]
                    }
                ],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(variables('virtualNetworks_NetappHandsonVnet_name'), '/PrivateSubnet-2')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_NetappHandsonVnet_name'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PrivateSubnet-1')]"
            ],
            "properties": {
                "addressPrefix": "172.18.3.0/24",
                "natGateway": {
                    "id": "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]"
                },
                "serviceEndpoints": [
                    {
                        "service": "Microsoft.AzureActiveDirectory",
                        "locations": [
                            "*"
                        ]
                    },
                    {
                        "service": "Microsoft.KeyVault",
                        "locations": [
                            "*"
                        ]
                    },
                    {
                        "service": "Microsoft.Storage",
                        "locations": [
                            "koreacentral",
                            "koreasouth"
                        ]
                    }
                ],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(variables('virtualNetworks_NetappHandsonVnet_name'), '/PublicSubnet-2')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_NetappHandsonVnet_name'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natGateways_NetappHandsonNAT_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PrivateSubnet-2')]"
            ],
            "properties": {
                "addressPrefix": "172.18.1.0/24",
                "serviceEndpoints": [
                    {
                        "service": "Microsoft.AzureActiveDirectory",
                        "locations": [
                            "*"
                        ]
                    },
                    {
                        "service": "Microsoft.KeyVault",
                        "locations": [
                            "*"
                        ]
                    },
                    {
                        "service": "Microsoft.Storage",
                        "locations": [
                            "koreacentral",
                            "koreasouth"
                        ]
                    }
                ],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/bastionHosts",
            "apiVersion": "2020-11-01",
            "name": "[variables('bastionHosts_NetappHandsonBastion_name')]",
            "location": "koreacentral",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_NetappHandsonBastion_IP_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'AzureBastionSubnet')]"
            ],
            "sku": {
                "name": "Basic"
            },
            "properties": {
                "dnsName": "bst-66aed0f8-d41b-4741-8482-df1bb53892c4.bastion.azure.com",
                "ipConfigurations": [
                    {
                        "name": "IpConf",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_NetappHandsonBastion_IP_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'AzureBastionSubnet')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "name": "[variables('publicIPAddresses_HandsonBastion_vm_ip_name')]",
            "location": "koreacentral",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "zones": [
                "1"
            ],
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "name": "[variables('networkSecurityGroups_HandsonBastion_vm_nsg_name')]",
            "location": "koreacentral",
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 340,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "name": "[variables('networkInterfaces_handsonbastion_vm928_z1_name')]",
            "location": "koreacentral",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_HandsonBastion_vm_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PublicSubnet-1')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_HandsonBastion_vm_nsg_name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "172.18.0.8",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_HandsonBastion_vm_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PublicSubnet-1')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_HandsonBastion_vm_nsg_name'))]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2022-03-01",
            "name": "[variables('virtualMachines_HandsonBastion_vm_name')]",
            "location": "koreacentral",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_handsonbastion_vm928_z1_name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_HandsonBastion_vm_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PublicSubnet-1')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_HandsonBastion_vm_nsg_name'))]"
            ],
            "zones": [
                "1"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B2s"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "canonical",
                        "offer": "0001-com-ubuntu-server-focal",
                        "sku": "20_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(variables('virtualMachines_HandsonBastion_vm_name'), '_OsDisk_1_40651e709a0d4aa7929fdded94cd786f')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "StandardSSD_LRS"
                        },
                        "deleteOption": "Delete",
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[variables('virtualMachines_HandsonBastion_vm_name')]",
                    "adminUsername": "azureuser",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/azureuser/.ssh/authorized_keys",
                                    "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEAvu2v6lkF59XSY3ch+Df2w/AN10EPXZ3JL2Xbqtsv13xVq9ZuzmUcdCpfa9NyjnyBoaXxymUvQSaeQCFxnjroAySOKVXaR6n6ahWFGQOYlfZHkKYg/N8pTpQht3QXNLoA8lUlrb3lyehQHxtCAhtgmx4BIaBpGM/FLaJqhu1OQ7gz0GBbG1qZOmEyrzcklkvriyPYzEESg3N9w+eM09rWvu3dK+EezAsgeFBlcsfHY5eNRmgp2iPfvz8tNZ3wgsrU/UiZHueqsMmGYS+Njjr461cx2q3EhjjPbYz8+tj3t/taZ/Jf419r9ZhT1JHm8/vUh22B5Xm31LdbMBPGvuUKPQ=="
                                }
                            ]
                        },
                        "provisionVMAgent": true,
                        "patchSettings": {
                            "patchMode": "ImageDefault",
                            "assessmentMode": "ImageDefault"
                        }
                    },
                    "customData": "[base64(variables('customData'))]",
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_handsonbastion_vm928_z1_name'))]",
                            "properties": {
                                "deleteOption": "Delete"
                            }
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.ContainerService/managedClusters",
            "apiVersion": "2020-11-01",
            "name": "[variables('clusterName')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_NetappHandsonVnet_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PrivateSubnet-1')]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PrivateSubnet-2')]"
            ],
            "location": "koreacentral",
            "sku": {
                "name": "Basic",
                "tier": "Free"
            },
            "identity": {
                "type": "SystemAssigned"
            },
            "properties": {
                "kubernetesVersion": "1.23.8",
                "dnsPrefix": "[concat(variables('clusterName'), '-dns')]",
                "networkProfile": {
                    "networkPlugin": "azure",
                    "serviceCidr": "10.0.0.0/16",
                    "dnsServiceIP": "10.0.0.10",
                    "dockerBridgeCidr": "172.17.0.1/16"
                },
                "agentPoolProfiles": [
                    {
                        "name": "agentpool",
                        "count": 1,
                        "vmSize": "Standard_DS2_v2",
                        "osDiskSizeGB": 30,
                        "osDiskType": "Managed",
                        "kubeletDiskType": "OS",
                        "vnetSubnetID": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PrivateSubnet-1')]",
                        "maxPods": 30,
                        "type": "VirtualMachineScaleSets",
                        "availabilityZones": [
                            "1",
                            "2",
                            "3"
                        ],
                        "enableAutoScaling": false,
                        "powerState": {
                            "code": "Running"
                        },
                        "orchestratorVersion": "1.23.8",
                        "enableNodePublicIP": false,
                        "mode": "System",
                        "osType": "Linux",
                        "osSKU": "Ubuntu",
                        "enableFIPS": false
                    },
                    {
                        "name": "userpool",
                        "count": 1,
                        "vmSize": "Standard_B2ms",
                        "osDiskSizeGB": 30,
                        "osDiskType": "Managed",
                        "kubeletDiskType": "OS",
                        "vnetSubnetID": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_NetappHandsonVnet_name'), 'PrivateSubnet-2')]",
                        "maxPods": 30,
                        "type": "VirtualMachineScaleSets",
                        "availabilityZones": [
                            "1",
                            "2",
                            "3"
                        ],
                        "enableAutoScaling": false,
                        "powerState": {
                            "code": "Running"
                        },
                        "orchestratorVersion": "1.23.8",
                        "enableNodePublicIP": false,
                        "enableCustomCATrust": false,
                        "nodeLabels": {
                            "purpose": "test"
                        },
                        "mode": "User",
                        "osType": "Linux",
                        "osSKU": "Ubuntu",
                        "enableFIPS": false
                    }
                ],
                "linuxProfile": {
                    "adminUsername": "[variables('linuxAdminUsername')]",
                    "ssh": {
                        "publicKeys": [
                            {
                                "keyData": "[variables('sshRSAPublicKey')]"
                            }
                        ]
                    }
                }
            }
        }
    ]
}
